tests/snapshots/examples_fixtures/functions__function_redeclaration_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/function_redeclaration_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `my_func` is already defined.

  --> examples/functions/function_redeclaration_error.flx:5:3
  |
5 |   fun my_func() {
  |   ^^^^^^^^^^^^^^^
6 |     return 2;
  | ^^^^^^^^^^^^^
7 |   }
  | ^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/functions/function_redeclaration_error.flx:1:3
  |
1 |   fun my_func() {
  |   ^^^^^^^^^^^^^^^
2 |     return 1;
  | ^^^^^^^^^^^^^
3 |   }
  | ^^^
== stdout ==
<not executed>
